# NewsBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celery_worker.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: api.py  config.py  main.py  redis_client.py  schemas.py  tasks.py  utils.py
app/news_parser/: __init__.py  habr.py  rbc.py
app/telegram/: bot.py  publisher.py
